deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: go-dp
  labels:
    app: go-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
      - name: go-app
        image: talhaanis1234/priv:hello-app-latest
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: regcred
