svc.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: go-svc
spec:
  type: NodePort
  selector:
    app: go-app
  ports:
    - protocol: TCP
      port: 8080
