ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: go-in
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello.pvt
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-svc
                port:
                  number: 8080
